# unique-matcher

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  benchmark.py  build.bat  check.bat  check.py  config.ini  genitem.py  install.bat  install.py  items.csv  items.py  main.py  match.py  pyproject.toml  requirements.txt  run_tests.py  screenshot.bat  screenshot.py  tox.ini  um_inst.iss  verify.py
.github/ISSUE_TEMPLATE/: -a--issue-with-item-detection.md  -b--bug-report.md  -c--feature-request.md  -d--documentation.md  bug_report.md  documentation.md  feature_request.md  issue-with-item-detection.md
.github/workflows/: lint.yaml  linters.yaml  tests.yml
assets/: items.csv
assets/qml/: MenuItemWithShortcut.qml  ResultCombinatorWindow.qml  main.qml
assets/templates/: debug.html
benchmark/: benchmark.py
debug/: debug.html
screen/: Cargo.toml
screen/src/: main.rs  monitor.rs
templates/: debug.html
tests/: conftest.py  test_config.py  test_item_db.py  test_matcher.py  test_title.py  test_utils.py
tests/test_data/: count.py
tools/: benchmark.py  found_uniques.py  items.py  match.py  run_tests.py
unique_matcher/: bases.py  constants.py  exceptions.py  generator.py  items.py  matcher.py  title.py  utils.py
unique_matcher/gui/: __init__.py  config.py  matcher.py  result_combinator.py  results.py  screenshot.py  utils.py
unique_matcher/gui/qml/: main.qml
unique_matcher/matcher/: exceptions.py  generator.py  items.py  matcher.py  result.py  title.py  utils.py
unique_matcher/matcher/plugins/: __init__.py  base.py  default.py  histogram.py  solaris_circlet.py
