[package]
name = "screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dirs-next = "2.0.0"
rust-ini = "0.19.0"
screenshots = "0.8.2"
windows = { version = "0.52.0", features = ["Win32_UI_WindowsAndMessaging",  "Win32_Foundation", "Win32_Graphics_Gdi"] }
